Dando estilos al formulario e incorporando enlaces

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,7 +23,7 @@ and open the template in the editor.
             <li>Quienes Somos</li>
             <li>Tienda</li>            
             <li>Catálogo de productos</li>
-            <li>Contacto</li>
+            <li><a href="formulario.html">Contacto</a></li>
         </ul>
         </div>
         
